--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 
                 <!-- Columna de imagen -->
                 <div class="col-lg-6 text-center animate-in">
-                    <img src="https://via.placeholder.com/600x450/1E3A5F/D4AF37?text=Dashboard+Processia" 
+                    <img src="image/hero-header.jpg" 
                          alt="Automatización de procesos empresariales" 
                          class="img-fluid rounded-4 shadow-lg">
                     <!-- Reemplaza con tu imagen real después -->
