--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <!-- Botones principales -->
                     <div class="d-grid d-sm-flex gap-3 justify-content-center justify-content-lg-start mb-4">
                         <a href="#contacto" class="btn btn-primary btn-lg px-5 py-3">
-                            <i class="bi bi-calendar-check me-2"></i>Agendar Diagnóstico Gratuito
+                            <i class="bi bi-calendar-check me-2"></i>Agendar Diagnóstico Ya
                         </a>
                         <a href="#servicios" class="btn btn-outline-light btn-lg px-5 py-3">
                             Ver Servicios
@@ -293,7 +293,7 @@
                     <div class="text-center mb-4">
                         <h2 class="display-6 fw-bold mb-3">¿Listo para Automatizar tu Empresa?</h2>
                         <p class="text-muted">
-                            Agenda una consultoría gratuita de 30 minutos y descubre cómo podemos optimizar tus procesos
+                            Agenda una consultoría de 60 minutos y descubre cómo podemos optimizar tu empresa
                         </p>
                     </div>
                     
@@ -359,7 +359,7 @@
                         </a>
                     </p>
                     <p class="mb-0 text-white-50 small">
-                        &copy; 2026 Processia Ops. Todos los derechos reservados. | Quito, Ecuador
+                        &copy; 2026 Processia Ops. Todos los derechos reservados. | Ecuador
                     </p>
                 </div>
             </div>
