--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -86,7 +86,7 @@
                         </h3>
                         <div class="bg-light p-4 rounded">
                             <p class="mb-2"><strong>Identificación:</strong> Titular de Processia Ops</p>
-                            <p class="mb-2"><strong>Domicilio:</strong> Quito, Ecuador</p>
+                            <p class="mb-2"><strong>Domicilio:</strong> Ecuador</p>
                             <p class="mb-2"><strong>Contacto:</strong> <a href="mailto:contacto@processia.online">contacto@processia.online</a></p>
                             <p class="mb-0"><strong>Sitio web:</strong> <a href="https://processia.online">processia.online</a></p>
                         </div>
