--- a/index.html
+++ b/index.html
@@ -325,6 +325,40 @@
                                 <textarea class="form-control" id="mensaje" name="mensaje" rows="3" required 
                                           placeholder="Describe brevemente el desafío que necesitas resolver..."></textarea>
                             </div>
+
+                                    <!-- ========== INICIO: CONSENTIMIENTO DE DATOS PERSONALES ========== -->
+                            <div class="col-12">
+                                <div class="alert alert-light border-start border-primary border-3 small mb-3">
+                                    <p class="mb-2"><strong><i class="bi bi-shield-check me-2"></i>Protección de Datos Personales</strong></p>
+                                    <p class="mb-2">
+                                        <strong>Processia Ops</strong> tratará tus datos personales (nombre, email, empresa, 
+                                        teléfono y mensaje) para:
+                                    </p>
+                                    <ul class="mb-2 ps-4">
+                                        <li>Responder a tu consulta sobre nuestros servicios</li>
+                                        <li>Agendar reuniones o diagnósticos gratuitos</li>
+                                        <li>Enviarte información comercial sobre automatización empresarial</li>
+                                    </ul>
+                                    <p class="mb-2">
+                                        <strong>Conservación:</strong> Tus datos se conservarán durante 3 años o hasta que solicites su eliminación.
+                                    </p>
+                                    <p class="mb-0">
+                                        <strong>Tus derechos:</strong> Puedes acceder, rectificar, eliminar o limitar el tratamiento de tus datos 
+                                        contactando a <a href="mailto:contacto@processia.online" class="text-primary">contacto@processia.online</a>. 
+                                        <a href="politica-privacidad.html" target="_blank" class="text-primary">Ver Política de Privacidad completa</a>.
+                                    </p>
+                                </div>
+                                
+                                <div class="form-check mb-3">
+                                    <input class="form-check-input" type="checkbox" id="consentimiento" name="consentimiento" required>
+                                    <label class="form-check-label" for="consentimiento">
+                                        <strong>Acepto que Processia Ops trate mis datos personales</strong> para los fines descritos 
+                                        y confirmo haber sido informado sobre mis derechos según la Ley Orgánica de Protección de 
+                                        Datos Personales de Ecuador. *
+                                    </label>
+                                </div>
+                            </div>
+                            <!-- ========== FIN: CONSENTIMIENTO DE DATOS PERSONALES ========== -->
                             
                             <div class="col-12">
                                 <button type="submit" class="btn btn-primary w-100 py-2 fw-semibold">
